fix page-results css no overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,6 @@ span {
     min-width: 100%;
     height: 2000px;
     margin-top: 300px;
-    overflow:hidden;
  }
  
 
